Fix some gaps on mobile styling

--- a/src/components/sections/About/About.module.scss
+++ b/src/components/sections/About/About.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin-top: 0.75em;
   padding: 0.75em 0;
+  gap: 2em;
 }
 
 .image img {
