--- a/src/components/sections/Skills/Skills.module.scss
+++ b/src/components/sections/Skills/Skills.module.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
+    gap: 1.5em;
 
     .category ul {
         display: flex;
